# kwin-ribbon

./: CMakeLists.txt  metadata.json  package.json  package.nix  readme.md
contents/code/: main.js
contents/config/: main.xml
docs/: smoke-test.md
native/: CMakeLists.txt  main.cpp  metadata.json  wheelbridge.cpp  wheelbridge.h
scripts/: build.js
src/runtime/: actions.js  arrange.js  bootstrap.js  classification.js  core.js  header.js  kwin-adapter.js  kwin-environment.js
tests/: actions.test.js  arrange.test.js  bootstrap.test.js  kwin-adapter.test.js  kwin-environment.test.js  native-wheel-bridge.test.js  package.test.js  runtime.test.js  window-classification.test.js
